--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
    
 <div id="about">
     <h3>About Us</h3>
+    <a href="#career"><h4>Volunteer With Us</h4></a>
+    <a href="#career"><h4>Our Culture</h4></a>
+    <a href="#career"><h4>Our Values</h4></a>
     <p>We are a non-governmental organization whose objective is to reduce the percentage levels of drug abuse among the youthful population of Kenya. We are motivated by the love towards each human and the fruits of living in a sober environment, sober country, sober world. </p>
 </div>
 
@@ -104,10 +107,9 @@
            
            contact us <br>
            <em>Email:</em>nakishcarpiscoh@gmail.com
-           <a href="https://www.facebook.com/?ref=logo" target=_blank><button class="btn">F</button></a>
            
-            &copy; 2020
-            <a href="privacy.html">Privacy </a><a href="terms.html">· Terms </a>      
+            <a href="privacy.html">Privacy </a><a href="terms.html">· Terms </a> 
+            <p>Location: Kibra, near Lindi Mosque<br>P.O Box 304-50307 Luanda</p>     
         </div>
 
    </footer>
