added career and organization culture

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<<<<<<< HEAD
     <title>Drug Abuse</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    </head>
     <body>
    
         <div class="nav">
@@ -88,19 +88,24 @@
     </fieldset>
 </div>
    
-<div id="about">
-    <h3>About Us</h3>
-    <a href="#career"><h4>Volunteer With Us</h4></a>
-    <a href="#career"><h4>Our Culture</h4></a>
-    <a href="#career"><h4>Our Values</h4></a>
-    <p>We are a non-governmental organization whose objective is to reduce the percentage levels of drug abuse among the youthful population of Kenya. We are motivated by the love towards each human and the fruits of living in a sober environment, sober country, sober world. </p>
-</div>
+
 
 <div id="news">
-    You can read more <a href="https://www.nation.co.ke/lifestyle/dn2/Why-drug-abuse-is-on-the-rise-among-KENYAN-teens/957860-2949294-qgbqtv/index.html" target=_self>here.</a>
-     <a href="http://erepository.uonbi.ac.ke/handle/11295/17493">University of Nairobi</a>
+    <h3>Events</h3>
+    You can read more <a href="https://www.nation.co.ke/lifestyle/dn2/Why-drug-abuse-is-on-the-rise-among-KENYAN-teens/957860-2949294-qgbqtv/index.html" target=_self>here.</a><br>
+     <a href="http://erepository.uonbi.ac.ke/handle/11295/17493">University of Nairobi</a><br>
+     <p>There are no events at the moment</p>
 </div>
+<div id="about">
+    <h3>About Us</h3>
+   
+    <p>We are a non-governmental organization whose objective is to reduce the percentage levels of drug abuse among the youthful population of Kenya. We are motivated by the love towards each human and the fruits of living in a sober environment, sober country, sober world. </p>
 
+    <div id="aboutus">
+        <a href="#career"><h4>Volunteer With Us</h4></a>
+     <a href="#Culture"><h4>Our Culture</h4></a>
+     <a href="#values"><h4>Our Values</h4></a></div> 
+</div>
    <footer class="footer">
        
        <div id="contacts">
